--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-/train-image/*
-/train-bigger-image
+/train-image
 /train-image-decalle
 /train-image-decalle-plus
 /train-image-decalle-banger
+
 /retrain-image
 /to-validate-image
 /test-image
-/temp-image/*
-/model/X_numpy_array.npy
-/model/Y_numpy_array.npy
+/temp-image
+/numpy-array
+/data-brut
