--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /train-image-decalle
 /train-image-decalle-plus
 /train-image-decalle-banger
+/train-image-decalle-banger-2
 
 /retrain-image
 /to-validate-image
